# neo_snake

./: .gitignore  CMakeLists.txt  README.md
dvi/: index.html
src/: Makefile
src/brick_game/common-code/: Constants.h  SaveScoreManager.h
src/brick_game/snake/: SnakeModel.cpp  SnakeModel.h
src/brick_game/tetris/: TetrisModel.cpp  TetrisModel.h  Tetromino.cpp  Tetromino.h
src/controller/: SnakeController.h  TetrisController.h
src/gui/console/: main.cpp
src/gui/console/common-code/: BaseView.cpp  BaseView.h  ConsoleView.cpp  ConsoleView.h
src/gui/console/snake/: SnakeConsoleView.cpp  SnakeConsoleView.h
src/gui/console/tetris/: TetrisConsoleView.cpp  TetrisConsoleView.h
src/gui/desktop/snake/: View.cpp  View.h  View.ui  main.cpp
src/tests/: snakeTest.cpp
